objects/PHSS_Email_Notification__mdt.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CC_Receivers__c</fullName>
        <description>CSV list of CC Receivers</description>
        <label>CC Receivers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Not_Processed_Message__c</fullName>
        <label>Not Processed Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Receivers__c</fullName>
        <label>Receivers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Message__c</fullName>
        <label>Success Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PHSS Email Notification</label>
    <pluralLabel>PHSS Email Notifications</pluralLabel>
</CustomObject>